Changes for REDIPS.drag library

4.0.1
- added public myhandler_dblclicked() event handler
    event is attached to the DIV object
- changing styles in example13

4.0.0
- added support for drag and drop table rows
- added example15 to show drag rows functionality
- private method set_color() renamed to set_position()
- created private method set_bgcolor() - accepts color as array
- created private method get_bgcolor() - returns color as array
- added public parameter "mode" (readonly) with values "cell" and "row" (REDIPS.drag working mode)
- added private methods row_clone() and row_drop()
- added event handlers for drag-n-drop table rows
    myhandler_row_clicked()
    myhandler_row_moved()
    myhandler_row_notmoved()
    myhandler_row_dropped()
    myhandler_row_dropped_source()
    myhandler_row_changed()
- added special class name "rowhandler" to enable highlighting rows when dragging row across row handler column (but disable when dragging table content)
- special class names are: drag, row, mark, only, single, rowhandler
- enable_drag() modified to accept DIV id or DIV object
- when row is moved then obj is reference to the cloned row, while obj_old is reference to the source row
- added property redips_rowspan to the table nodeList to mark tables that contains rowspaned cells
- redips_rowspan is defined inside init_tables()
- optimization in set_trc() method
    1) search for rowspaned cells only if table contains rowspaned cells
    2) after cell is found, test if Y is inside current cell - this should prevent case where TD border > 1px and upper colspaned row like in example15
       (loop unnecessary went up to the top table top)
- fixed BUG - when table cell has shrunk, forbidden cell in the last row was lit (example15)
- added public method row_opacity(el, opacity, color)
- REDIPS.drag added to the github.com repository https://github.com/dbunic/REDIPS_drag

3.2.1
- fixing example03: School timetable
  * fixing div.sort()